--- a/portfolio.html
+++ b/portfolio.html
@@ -4,35 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Portfolio</title>
+		<title>WebStudio</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- Fonts -->
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- Normalize -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<!-- CSS -->
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
 	<body>
 		<!-- HEADER -->
 		<header class="page-header">
-			<nav>
-				<a href="./index.html" class="logo link" lang="en"><span class="logo-web">Web</span>Studio</a>
-				<ul class="site-nav list">
-					<li class="nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
-					<li class="nav-item"><a href="./portfolio.html" class="nav-link link current">Портфоліо</a></li>
-					<li class="nav-item"><a href="#" class="nav-link link">Контакти</a></li>
-				</ul>
-			</nav>
+			<div class="container header-container">
+				<nav class="navigation">
+					<a href="./index.html" class="logo link" lang="en"><span class="logo-web">Web</span>Studio</a>
+					<ul class="site-nav list">
+						<li class="nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
+						<li class="nav-item"><a href="./portfolio.html" class="nav-link link current">Портфоліо</a></li>
+						<li class="nav-item"><a href="#" class="nav-link link">Контакти</a></li>
+					</ul>
+				</nav>
 
-			<!-- Contacts header -->
-			<ul class="contact-list list">
-				<li class="contact-item"
-					><a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a></li
-				>
-				<li class="contact-item"><a href="tel:+380961111111" class="contact-phone link">+38 096 111 11 11</a></li>
-			</ul>
+				<!-- Contacts header -->
+				<ul class="contact-list list">
+					<li class="contact-item"
+						><a href="mailto:info@devstudio.com" class="contact-email link">info@devstudio.com</a></li
+					>
+					<li class="contact-item"><a href="tel:+380961111111" class="contact-phone link">+38 096 111 11 11</a></li>
+				</ul>
+			</div>
 		</header>
 
 		<!-- HERO -->
