--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
 			</section>
 
 			<!-- Переваги -->
-			<section class="section feature">
+			<section class="section">
 				<div class="container">
 					<h2 class="visually-hidden">Наші переваги</h2>
 					<ul class="feature-list list">
 						<li>
-							<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+							<h3 class="feature-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 						</li>
 						<li>
-							<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+							<h3 class="feature-title title">ПУНКТУАЛЬНІСТЬ</h3>
 							<p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 						</li>
 						<li>
-							<h3 class="title">ПЛАНУВАННЯ</h3>
+							<h3 class="feature-title title">ПЛАНУВАННЯ</h3>
 							<p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
 						<li>
-							<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+							<h3 class="feature-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 						</li>
 					</ul>
@@ -83,9 +83,9 @@
 			</section>
 
 			<!-- Чим ми займаємося -->
-			<section class="section work">
+			<section class="work section">
 				<div class="container">
-					<h2 class="section-title">Чим ми займаємося</h2>
+					<h2 class="work-title section-title">Чим ми займаємося</h2>
 					<ul class="work-list list">
 						<li><img src="./images/work/coding.jpg" alt="Розробка програмного забезпечення" width="370" /></li>
 						<li><img src="./images/work/apps_for_phone.jpg" alt="Тестування мобільного додатку" width="370" /></li>
@@ -97,7 +97,7 @@
 			<!-- Наша команда -->
 			<section class="team section">
 				<div class="container">
-					<h2 class="section-title">Наша команда</h2>
+					<h2 class="team-title section-title">Наша команда</h2>
 					<ul class="team-list list">
 						<li class="team-card">
 							<img src="./images/team/product_designer.jpg" alt="фото Продукт дизайнер" width="270" />
