--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,13 @@
 			rel="stylesheet"
 		/>
 		<!-- Normalize -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<!-- CSS -->
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
@@ -44,13 +50,14 @@
 		<!-- HERO -->
 		<main>
 			<section class="section">
-				<h1 class="visually-hidden">Наші проекти</h1>
-				<ul class="site-choise list">
-					<li><button class="site-choise-btn" type="button">Усі</button></li>
-					<li><button class="site-choise-btn" type="button">Веб-сайти</button></li>
-					<li><button class="site-choise-btn" type="button">Додатки</button></li>
-					<li><button class="site-choise-btn" type="button">Дизайн</button></li>
-					<li><button class="site-choise-btn" type="button">Маркетинг</button></li>
+				<div class="container">
+					<h1 class="visually-hidden">Наші проекти</h1>
+				<ul class="portfolio-list list">
+					<li><button class="portfolio-btn" type="button">Усі</button></li>
+					<li><button class="portfolio-btn" type="button">Веб-сайти</button></li>
+					<li><button class="portfolio-btn" type="button">Додатки</button></li>
+					<li><button class="portfolio-btn" type="button">Дизайн</button></li>
+					<li><button class="portfolio-btn" type="button">Маркетинг</button></li>
 				</ul>
 				<ul class="site-list list">
 					<li class="site">
@@ -117,32 +124,35 @@
 						</a>
 					</li>
 				</ul>
+				</div>
 			</section>
 		</main>
 
 		<!-- FOOTER -->
 		<footer class="page-footer">
-			<a class="logo logo-footer" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
-			<address>
-				<ul class="adress-list list">
-					<li>
-						<a
-							class="adress-city link"
-							href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-							target="_blank"
-							rel="noopener noreferrer"
-						>
-							м. Київ, пр-т Лесі Українки, 26
-						</a>
-					</li>
-					<li class="contact-footer">
-						<a class="contact-email link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
-					</li>
-					<li class="contact-footer">
-						<a class="contact-phone link" href="tel:+380961111111"> +38 096 111 11 11</a>
-					</li>
-				</ul>
-			</address>
+			<div class="container">
+				<a class="logo logo-footer" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
+				<address class="address">
+					<ul class="adress-list list">
+						<li>
+							<a
+								class="adress-city link"
+								href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
+								м. Київ, пр-т Лесі Українки, 26
+							</a>
+						</li>
+						<li class="contact-footer">
+							<a class="contact-email link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+						</li>
+						<li class="contact-footer">
+							<a class="contact-phone link" href="tel:+380961111111"> +38 096 111 11 11</a>
+						</li>
+					</ul>
+				</address>
+			</div>
 		</footer>
 	</body>
 </html>
