--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<body>
 		<!-- HEADER -->
-		<header class="page-header">
+		<header class="header-section">
 			<div class="container header-container">
 				<nav class="navigation">
 					<a href="./index.html" class="logo link" lang="en"><span class="logo-web">Web</span>Studio</a>
