--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 			<!-- HERO -->
 			<section class="hero">
 				<h1 class="hero-title">
-					Ефективні рішення для <br />
-					вашого бізнесу
+					<max-width 696 px>Ефективні рішення для вашого бізнесу</max-width>
 				</h1>
 				<button class="button-order" type="button">Замовити послугу</button>
 			</section>
@@ -62,19 +61,19 @@
 				<div class="container">
 					<h2 class="visually-hidden">Наші переваги</h2>
 					<ul class="feature-list list">
-						<li>
+						<li class="feature-item">
 							<h3 class="feature-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="feature-title title">ПУНКТУАЛЬНІСТЬ</h3>
 							<p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="feature-title title">ПЛАНУВАННЯ</h3>
 							<p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="feature-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 						</li>
