--- a/portfolio.html
+++ b/portfolio.html
@@ -52,78 +52,93 @@
 			<section class="section">
 				<div class="container">
 					<h1 class="visually-hidden">Наші проекти</h1>
-				<ul class="portfolio-list list">
-					<li><button class="portfolio-btn" type="button">Усі</button></li>
-					<li><button class="portfolio-btn" type="button">Веб-сайти</button></li>
-					<li><button class="portfolio-btn" type="button">Додатки</button></li>
-					<li><button class="portfolio-btn" type="button">Дизайн</button></li>
-					<li><button class="portfolio-btn" type="button">Маркетинг</button></li>
-				</ul>
-				<ul class="site-list list">
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project1.jpg" alt="Веб-сайт" width="370" height="294" />
-							<h2 class="site-name">Технокряк</h2>
-							<p class="site-type">Веб-сайт</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project2.jpg" alt="Постер баскетбол" width="370" height="294" />
-							<h2 class="site-name">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
-							<p class="site-type">Дизайн</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project3.jpg" alt="Додаток рибний ресторан" width="370" height="294" />
-							<h2 class="site-name">Ресторан <span lang="en">Seafood</span></h2>
-							<p class="site-type">Додаток</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project4.jpg" alt="Навушники" width="370" height="294" />
-							<h2 class="site-name">Проєкт <span lang="en">Prime</span></h2>
-							<p class="site-type">Маркетинг</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project5.jpg" alt="Додаток коробки" width="370" height="294" />
-							<h2 class="site-name">Проєкт <span lang="en">Boxes</span></h2>
-							<p class="site-type">Додаток</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project6.jpg" alt="Веб-сайт" width="370" height="294" />
-							<h2 class="site-name" lang="en">Inspiration has no Borders</h2>
-							<p class="site-type">Веб-сайт</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project7.jpg" alt="Журнал" width="370" height="294" />
-							<h2 class="site-name">Видання <span lang="en">Limited Edition</span></h2>
-							<p class="site-type">Дизайн</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project8.jpg" alt="Етикетка" width="370" height="294" />
-							<h2 class="site-name">Проєкт <span lang="en">LAB</span></h2>
-							<p class="site-type">Маркетинг</p>
-						</a>
-					</li>
-					<li class="site">
-						<a class="site-link link" href="#">
-							<img src="./images/portfolio/project9.jpg" alt="Додаток зростаючий бізнес" width="370" height="294" />
-							<h2 class="site-name" lang="en">Growing Business</h2>
-							<p class="site-type">Додаток</p>
-						</a>
-					</li>
-				</ul>
+					<ul class="portfolio-list list">
+						<li><button class="portfolio-btn" type="button">Усі</button></li>
+						<li><button class="portfolio-btn" type="button">Веб-сайти</button></li>
+						<li><button class="portfolio-btn" type="button">Додатки</button></li>
+						<li><button class="portfolio-btn" type="button">Дизайн</button></li>
+						<li><button class="portfolio-btn" type="button">Маркетинг</button></li>
+					</ul>
+					<ul class="site-list list">
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project1.jpg" alt="Веб-сайт" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Технокряк</h2>
+									<p class="site-type">Веб-сайт</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project2.jpg" alt="Постер баскетбол" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+									<p class="site-type">Дизайн</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project3.jpg" alt="Додаток рибний ресторан" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Ресторан <span lang="en">Seafood</span></h2>
+									<p class="site-type">Додаток</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project4.jpg" alt="Навушники" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Проєкт <span lang="en">Prime</span></h2>
+									<p class="site-type">Маркетинг</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project5.jpg" alt="Додаток коробки" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Проєкт <span lang="en">Boxes</span></h2> <p class="site-type">Додаток</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project6.jpg" alt="Веб-сайт" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name" lang="en">Inspiration has no Borders</h2>
+									<p class="site-type">Веб-сайт</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project7.jpg" alt="Журнал" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Видання <span lang="en">Limited Edition</span></h2>
+									<p class="site-type">Дизайн</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project8.jpg" alt="Етикетка" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name">Проєкт <span lang="en">LAB</span></h2> <p class="site-type">Маркетинг</p>
+								</div>
+							</a>
+						</li>
+						<li class="site">
+							<a class="site-link link" href="#">
+								<img src="./images/portfolio/project9.jpg" alt="Додаток зростаючий бізнес" width="370" height="294" />
+								<div class="site-container">
+									<h2 class="site-name" lang="en">Growing Business</h2> <p class="site-type">Додаток</p>
+								</div>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</section>
 		</main>
