--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 		<main>
 			<!-- HERO -->
 			<section class="hero">
-				<h1 class="hero-title">
-					<max-width 696 px>Ефективні рішення для вашого бізнесу</max-width>
-				</h1>
+				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 				<button class="button-order" type="button">Замовити послугу</button>
 			</section>
 
